--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.shamanland:fab:0.0.7'
     compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'se.emilsjolander:stickylistheaders:2.5.2'
 }
